标签&样式优化

--- a/src/app/core/components/dr-date/dr-date.component.html
+++ b/src/app/core/components/dr-date/dr-date.component.html
@@ -1,4 +1,4 @@
-<div class="form-group">
+<div >
   <label class="form-label">日期</label>
   <div class="input-group">
     <input type="text" class="form-input" name="date" [(ngModel)]="date">
