--- a/src/app/components/account/components/expense/expense-add-edit/expense-add-edit.component.html
+++ b/src/app/components/account/components/expense/expense-add-edit/expense-add-edit.component.html
@@ -9,68 +9,61 @@
 
   <section [style.border]="expenseBook?.border">
     <form>
-      <div>
-        <dr-date></dr-date>
-        <!-- <label for="time">日期:</label>
-        <input type="date" id="time" name="expenseDate" [(ngModel)]="expenseDate"> -->
+      <div class="columns">
+        <div class="column col-6">
+          <dr-date></dr-date>
+        </div>
+        <div class="column col-6">
+          <address-select [title]="'支出地点'" [addressId]="addressId" (setAddress)="onSetAddress($event)"></address-select>
+        </div>
       </div>
 
-      <div class="address">
-        <address-select [title]="'支出地点'" [addressId]="addressId" (setAddress)="onSetAddress($event)"></address-select>
+      <div class="columns">
+        <div class="column col-6">
+          <expenseCategory-select [title]="'支出类别'" [expenseBook]="expenseBook" (setCategory)="onSetCategory($event)"
+            [expenseCategoryId]="expenseCategoryId"></expenseCategory-select>
+        </div>
+        <div class="column col-6">
+          <fund-party-select [title]="'收款方'" [type]="1" (setFundParty)="onSetFundParty($event)"
+            [fundPartyId]="fundPartyId">
+          </fund-party-select>
+        </div>
       </div>
 
-      <div class="address">
-        <expenseCategory-select [title]="'支出类别'" [expenseBook]="expenseBook" (setCategory)="onSetCategory($event)"
-          [expenseCategoryId]="expenseCategoryId"></expenseCategory-select>
+      <div class="columns">
+        <div class="column col-6">
+          <fundChannel-select [title]="'付款渠道'" (setFundChannel)="onSetsetFundChannel($event)"
+            [fundChannelId]="fundChannelId"></fundChannel-select>
+        </div>
+        <div class="column col-6">
+          <fund-account-select [title]="'付款账户'" [fundChannelId]="fundChannelId"
+            (setFundAccount)="onSetFundAccount($event)" [filterCredit]="false" [fundAccountId]="fundAccountId">
+          </fund-account-select>
+        </div>
       </div>
-
-      <div class="address">
-        <fund-party-select [title]="'收款方'" [type]="1" (setFundParty)="onSetFundParty($event)"
-          [fundPartyId]="fundPartyId">
-        </fund-party-select>
-      </div>
-
-      <div class="address">
-        <fundChannel-select [title]="'付款渠道'" (setFundChannel)="onSetsetFundChannel($event)"
-          [fundChannelId]="fundChannelId"></fundChannel-select>
-      </div>
-
-      <div class="address">
-        <fund-account-select [title]="'付款账户'" [fundChannelId]="fundChannelId"
-          (setFundAccount)="onSetFundAccount($event)" [filterCredit]="false" [fundAccountId]="fundAccountId">
-        </fund-account-select>
-      </div>
-      <fieldset class="detail">
+      <fieldset>
         <legend>支出明细</legend>
-        <ul class="tab">
-          <li class="tab-item" [class.active]="expenseDetail == item" *ngFor="let item of expenseDetailList"
-            (click)="select(item)">
-            <a>{{item}}</a>
-          </li>
-        </ul>
-        <div class="content" *ngIf="expenseDetail == '内容'">
-          <div class="form-group">
+        <div class="columns">
+          <div class="form-group column col-6">
             <input class="form-input" type="text" name="content" placeholder="支出内容" [(ngModel)]="content">
           </div>
-          <div class="input-group">
-            <input class="form-input" type="number" placeholder="支出金额" name="amount" [(ngModel)]="amount">
-            <span class="input-group-addon">元</span>
+          <div class="column col-6">
+            <div class="input-group">
+              <input class="form-input" type="text" placeholder="支出金额" name="amount" [(ngModel)]="amount">
+              <span class="input-group-addon">元</span>
+            </div>
           </div>
         </div>
-
-        <div class="participan" [style.display]="expenseDetail == '参与人' ? 'block':'none'">
+        <div class="columns detail">
           <participant-select [title]="'参与'" (setParticipantList)="onSetParticipantList($event)"
             [hasParticipantList]="participantList"></participant-select>
         </div>
-
-        <div class="label" [style.display]="expenseDetail == '标签' ? 'block':'none'">
+        <div class="columns detail">
           <label-select [title]="'标签'" [type]="'1'" (setLabelList)="onSetLabelList($event)" [hasLabelList]="labelList">
           </label-select>
         </div>
-
-        <div class="memo" [style.display]="expenseDetail == '备注' ? 'block':'none'">
-          <textarea name="memo" [(ngModel)]="memo">
-                </textarea>
+        <div class="columns detail">
+          <memo [title]="'备注'" [maxNumber]="500" (setMemo)="onSetMemo($event)"></memo>
         </div>
       </fieldset>
     </form>
