--- a/src/app/components/account/components/expense/expense-add-edit/expense-add-edit.component.scss
+++ b/src/app/components/account/components/expense/expense-add-edit/expense-add-edit.component.scss
@@ -8,9 +8,6 @@ main {
   margin: 10px;
 }
 
-li {
-  cursor: pointer;
-}
 
 section {
   flex-grow: 1;
@@ -33,60 +30,25 @@ main {
   }
 
   form {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(6, 1fr);
-    grid-column-gap: 10px;
-    grid-row-gap: 0px;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
 
-    .address {
-      position: relative;
-    }
-
-    .detail {
-      grid-column: span 2;
-      grid-row: span 3;
+    fieldset {
       border-top: 1px dashed #4b48d6;
-
-      .tab .tab-item a {
-        margin: 0 .8rem 0 0;
-      }
+      flex-grow: 1;
+      margin-top: 10px;
 
       legend {
         font-size: 14px;
         font-weight: normal;
-        margin-bottom: 0;
+        margin-bottom: 10px;
       }
 
-      .content {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-
-        div {
-          margin: 5px 2px;
-        }
-      }
-
-      .participan {
-        display: flex;
-        flex-direction: row;
-        padding: 0 10px;
-      }
-
-      .label {
-        display: flex;
-        flex-direction: row;
-        padding: 0 10px;
-      }
-
-      .memo {
-        align-items: center;
-
-        textarea {
-          width: 96%;
-          height: 60px;
-        }
+      .detail {
+        padding-left: .4rem;
+        padding-right: .4rem;
+        margin: 10px 0;
       }
     }
   }
@@ -94,7 +56,6 @@ main {
   .dr-btn-group {
     display: flex;
     align-items: center;
-    flex-grow: 1;
     margin: 10px 20px;
     justify-content: center;
 
