--- a/src/app/core/components/participant/participant-select/participant-select.component.html
+++ b/src/app/core/components/participant/participant-select/participant-select.component.html
@@ -1,17 +1,31 @@
 <main>
   <label *ngIf="title">{{title}}:</label>
-  <div class="content">
-    <ul class="selected-participant">
-      <li *ngFor="let item of selectedParticipantList">{{item?.name}} <i (click)="delete(item)"></i></li>
-      <li class="select" id="participant-select" blankClick>
-        选择参与人
-        <div class="ul-select" *ngIf="isListShow">
-          <ul *ngIf="participantList && participantList?.length">
-            <li *ngFor="let item of participantList" (click)="select(item)">{{item?.name}}</li>
-          </ul>
-          <div class="add" (click)="add()">添加参与人</div>
-        </div>
+  <section #participantListEle>
+    <div class="content" #contentEle>
+      <div class="chip" *ngFor="let item of selectedParticipantList">
+        <i class="icon icon-people"></i>
+        {{item?.name}}
+        <a class="btn btn-clear" (click)="delete(item)" aria-label="Close" role="button"></a>
+      </div>
+      <input name="filterParticipant" id="participant-list" [(ngModel)]="filterParticipant" class="form-input input-sm"
+        type="text" placeholder="添加参与人">
+    </div>
+    <ul class="menu" [style.top]="top+'px'" *ngIf="ulShow">
+      <li class="menu-item" *ngFor="let item of list" (click)="select(item)">
+        <a>
+          <span>
+            {{item?.name}}
+          </span>
+          <i *ngIf="item?.selected" class="icon icon-check"></i>
+        </a>
+
+      </li>
+      <li class="menu-item add">
+        <button class="btn btn-primary btn-sm"><i class="icon icon-plus"></i>
+          添加参与人</button>
       </li>
     </ul>
-  </div>
+  </section>
+
+
 </main>
