--- a/src/app/core/components/dr-date/dr-date.component.html
+++ b/src/app/core/components/dr-date/dr-date.component.html
@@ -1,53 +1,64 @@
-<div >
-  <label class="form-label">日期</label>
-  <div class="input-group">
-    <input type="text" class="form-input" name="date" [(ngModel)]="date">
-    <i class="input-group-addon form-icon fa fa-calendar" (click)="show = !show"></i>
-  </div>
-</div>
+<main>
+  <div>
+    <ng-container *ngIf="type==='input'">
+      <label class="form-label">日期</label>
+      <div class="input-group"  #drDateEle>
+        <input type="text" class="form-input" name="date" [(ngModel)]="date">
+        <i class="input-group-addon form-icon fa fa-calendar" (click)="show = !show"></i>
+      </div>
+    </ng-container>
 
-<div class="calendar" [style.display]="show?'block':'none'">
-  <div class="calendar-nav navbar">
-    <button class="btn btn-action btn-link btn-lg" (click)="prev()"><i class="icon icon-arrow-left"></i></button>
-    <div class="navbar-primary" *ngIf="viewType === 'day'">
-      <span (click)="viewYear()">{{year}}年</span>
-      <span (click)="viewMonth()">{{month?.name}}</span>
-    </div>
-    <div class="navbar-primary" *ngIf="viewType === 'month'">
-      <span (click)="viewYear()">{{year}}年</span>
-    </div>
-    <div class="navbar-primary" *ngIf="viewType === 'year'">
-      <span>{{startYear}}</span> -
-      <span>{{endYear}}</span>
-    </div>
-    <button class="btn btn-action btn-link btn-lg" (click)="next()"><i class="icon icon-arrow-right"></i></button>
+    <ng-container *ngIf="type==='text'">
+      <span style="cursor:pointer"  #drDateEle (click)="show = !show">
+        {{date}}
+      </span>
+    </ng-container>
   </div>
-  <div class="calendar-container">
-    <div class="calendar-header" *ngIf="viewType === 'day'">
-      <div class="calendar-date" *ngFor="let item of weekList">{{item.name}}</div>
+
+  <div class="calendar" [class.calendar-text]="type==='text'" [style.display]="show?'block':'none'">
+    <div class="calendar-nav navbar">
+      <button class="btn btn-action btn-link btn-lg" (click)="prev()"><i class="icon icon-arrow-left"></i></button>
+      <div class="navbar-primary" *ngIf="viewType === 'day'">
+        <span class="text-dark" (click)="viewYear()">{{year}}年</span>
+        <span class="text-dark" (click)="viewMonth()">{{month?.name}}</span>
+      </div>
+      <div class="navbar-primary" *ngIf="viewType === 'month'">
+        <span class="text-dark" (click)="viewYear()">{{year}}年</span>
+      </div>
+      <div class="navbar-primary" *ngIf="viewType === 'year'">
+        <span class="text-dark">{{startYear}}</span> -
+        <span class="text-dark">{{endYear}}</span>
+      </div>
+      <button class="btn btn-action btn-link btn-lg" (click)="next()"><i class="icon icon-arrow-right"></i></button>
     </div>
-    <div class="calendar-body" [class.calendar-month]="viewType === 'month' || viewType === 'year'">
-      <ng-container *ngIf="viewType === 'day'">
-        <div class="calendar-date" *ngFor="let item of daysList">
-          <button class="date-item" [class.selected]="item === day" (click)="selectDay(item)">{{item}}</button>
-        </div>
-      </ng-container>
+    <div class="calendar-container">
+      <div class="calendar-header" *ngIf="viewType === 'day'">
+        <div class="calendar-date" *ngFor="let item of weekList">{{item.name}}</div>
+      </div>
+      <div class="calendar-body" [class.calendar-month]="viewType === 'month' || viewType === 'year'">
+        <ng-container *ngIf="viewType === 'day'">
+          <div class="calendar-date" *ngFor="let item of daysList">
+            <button class="date-item" [class.selected]="(item.day == day && item.month==month.number)"
+              (click)="selectDay(item.day)">{{item.day}}</button>
+          </div>
+        </ng-container>
 
-      <ng-container *ngIf="viewType === 'month'">
-        <div class="calendar-date month" *ngFor="let item of monthsList">
-          <button (click)="selectMonth(item)" [class.selected]="item.name === month.name"
-            class="date-item">{{item.name}}</button>
-        </div>
-      </ng-container>
+        <ng-container *ngIf="viewType === 'month'">
+          <div class="calendar-date month" *ngFor="let item of monthsList">
+            <button (click)="selectMonth(item)" [class.selected]="item.name === month.name"
+              class="date-item">{{item.name}}</button>
+          </div>
+        </ng-container>
 
-      <ng-container *ngIf="viewType === 'year'">
-        <div class="calendar-date year" *ngFor="let item of yearsList;let i=index">
-          <button *ngIf="i===0" (click)="prev()" class="date-item panel-year">{{item}}</button>
-          <button *ngIf="(i!==0) && (i!==(yearsList.length-1))" (click)="selectYear(item)"
-            class="date-item">{{item}}</button>
-          <button *ngIf="i===(yearsList.length-1)" (click)="prev()" class="date-item panel-year">{{item}}</button>
-        </div>
-      </ng-container>
+        <ng-container *ngIf="viewType === 'year'">
+          <div class="calendar-date year" *ngFor="let item of yearsList;let i=index">
+            <button *ngIf="i===0" (click)="prev()" class="date-item panel-year">{{item}}</button>
+            <button *ngIf="(i!==0) && (i!==(yearsList.length-1))" (click)="selectYear(item)"
+              class="date-item">{{item}}</button>
+            <button *ngIf="i===(yearsList.length-1)" (click)="prev()" class="date-item panel-year">{{item}}</button>
+          </div>
+        </ng-container>
+      </div>
     </div>
   </div>
-</div>
+</main>
