--- a/src/app/components/account/components/expense/expense-list/expense-detail/expense-detail.component.html
+++ b/src/app/components/account/components/expense/expense-list/expense-detail/expense-detail.component.html
@@ -1,7 +1,7 @@
 <main>
   <div class="day-expense">
     <span (click)="return()">
-      &lt;&lt;{{data.expenseBookName}}
+      <i class="icon icon-back"></i>{{data.expenseBookName}}
     </span>
     <span>
       -{{data.totalAmount}}元
@@ -9,19 +9,19 @@
   </div>
   <ul class="expense-detail-list">
     <li *ngFor="let group of expenseService?.groupExpenseDetailList">
-      <div class="expense-category">
+      <div class="expense-category text-ellipsis">
         {{group.name}}
       </div>
       <div class="expense-detail">
         <ul *ngFor="let item of group.list" (click)="edit(item)">
           <li>
             <div>
-              <span>{{item.content}}</span>
-              <span>{{item.fundPartyName}}</span>
+              <span class="text-ellipsis">{{item.content}}</span>
+              <span class="text-ellipsis">{{item.fundPartyName}}</span>
             </div>
             <div>
-              <span>-{{item.amount}}元</span>
-              <span>{{item.fundChannelName}}</span>
+              <span class="text-ellipsis">-{{item.amount}}元</span>
+              <span class="text-ellipsis">{{item.fundChannelName}}</span>
             </div>
           </li>
         </ul>
