--- a/src/app/components/account/components/expense/expense-list/expense-detail/expense-detail.component.scss
+++ b/src/app/components/account/components/expense/expense-list/expense-detail/expense-detail.component.scss
@@ -3,9 +3,12 @@ main {
   flex-direction: column;
   height: 100%;
   background: #fff;
+  -webkit-app-region: no-drag;
+  border: 1px solid #5755d9;
 }
 
-ul{
+ul,
+li {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -23,8 +26,8 @@ main>ul {
 .day-expense {
   height: 44px;
   display: flex;
-  background: #40a9ff;
-  border: 1px solid #40a9ff;
+  background: #5755d9;
+  border: 1px solid #5755d9;
   color: #fff;
   font-size: 15px;
   font-weight: bolder;
@@ -34,7 +37,12 @@ main>ul {
 }
 
 .day-expense>span:first-of-type {
+  display: inline-flex;
   cursor: pointer;
+  align-items: center;
+  i{
+    margin-right: 5px;
+  }
 }
 
 .expense-detail-list ul {
@@ -60,10 +68,11 @@ main>ul {
 }
 
 .expense-category {
-  padding: 0 10px;
-  width: 40px;
+  padding: 0 5px;
+  width: 70px;
   font-weight: bold;
   font-size: 16px;
+  text-align: center;
 }
 
 .expense-detail {
