--- a/src/app/components/account/components/expense/expense.component.scss
+++ b/src/app/components/account/components/expense/expense.component.scss
@@ -3,8 +3,8 @@ main {
   height: calc(100% - 12px);
 
   .dynamic-component {
-    width: 240px;
-    padding-bottom: 5px;
-    margin: 4px 5px 0 0;
+    width: 245px;
+    margin: 10px 5px 0 0;
+    height: 100%;
   }
 }
