--- a/src/app/core/components/dr-date/dr-date.component.scss
+++ b/src/app/core/components/dr-date/dr-date.component.scss
@@ -1,3 +1,7 @@
+main {
+  position: relative;
+}
+
 i {
   cursor: pointer;
 }
@@ -15,6 +19,11 @@ i {
 
 .calendar-header {
   padding: .2rem 0;
+}
+
+.calendar-text {
+  right: -142px;
+  top: 32px;
 }
 
 
