--- a/src/app/components/account/components/expense/expense-add-edit/expense-add-edit.component.html
+++ b/src/app/components/account/components/expense/expense-add-edit/expense-add-edit.component.html
@@ -1,6 +1,6 @@
 <main>
   <div class="expense-book">
-    <expense-book-list (setExpenseBook)="onSetExpenseBook($event)"></expense-book-list>
+    <expense-book-list [expenseBookId]="expenseBookId" (setExpenseBook)="onSetExpenseBook($event)"></expense-book-list>
   </div>
 
   <section>
@@ -45,7 +45,7 @@
           </div>
           <div class="column col-6">
             <div class="input-group">
-              <input class="form-input" type="number" placeholder="支出金额" name="amount" [(ngModel)]="amount">
+              <input class="form-input" type="number" step="0.01" placeholder="支出金额" name="amount" [(ngModel)]="amount">
               <span class="input-group-addon">元</span>
             </div>
           </div>
@@ -72,8 +72,6 @@
         <i class="icon icon-refresh"></i> 重置
       </button>
     </div>
-
-    <!-- *ngIf="editOrDelFlag && !addFlag" -->
     <div class="edit-del" *ngIf="editOrDelFlag && !addFlag">
       <div class="dr-btn-group">
         <button class="btn btn-primary" (click)="editExpense()">
@@ -83,8 +81,7 @@
           <i class="icon icon-delete"></i> 删除
         </button>
       </div>
-      <!-- <a (click)="goAdd()">&gt;&gt;添加支出</a> -->
-      <button class="btn btn-link go-add" (click)="editExpense()">
+      <button class="btn btn-link go-add" (click)="goAdd()">
         <i class="icon icon-share"></i> 添加支出
       </button>
     </div>
