--- a/src/app/core/components/addreess/address-select/address-select.component.html
+++ b/src/app/core/components/addreess/address-select/address-select.component.html
@@ -1,24 +1,7 @@
-<!-- <main>
-  <label>
-    {{title}}:
-  </label>
-  <div class="select"  >
-    <input type="text" name="address" [(ngModel)]="address" disabled placeholder="请选择地点">
-    <i class="down-triangle"></i>
-  </div>
-  <div class="ul-select" *ngIf="isListShow">
-    <ul>
-      <li (click)="select(item)" *ngFor="let item of list">
-        {{item?.province}}|{{item?.city}}|{{item?.area}}
-      </li>
-    </ul>
-    <div class="add" (click)="add()">添加地点</div>
-  </div>
-</main> -->
 <main>
   <form>
     <div class="form-item">
-      <label class="form-label" for="input-example-1">{{title}}</label>
+      <label class="form-label">{{title}}</label>
       <div class="has-icon-left" #addressListEle>
         <input type="text" class="form-input" placeholder="请选择地点" name="address" [(ngModel)]="address"
           autocomplete="off" id="address-list">
