--- a/src/app/components/account/components/income/income.component.scss
+++ b/src/app/components/account/components/income/income.component.scss
@@ -1,11 +1,10 @@
 main {
-    display: flex;
+  display: flex;
+  height: calc(100% - 12px);
+
+  .dynamic-component {
+    width: 245px;
+    margin: 10px 5px 0 0;
     height: 100%;
-  
-    .dynamic-component {
-      width: 240px;
-      padding-bottom: 5px;
-      margin: 4px 5px 0 0;
-    }
   }
-  
+}
