--- a/src/app/core/components/income-category/incomeCategory-select/incomeCategory-select.component.html
+++ b/src/app/core/components/income-category/incomeCategory-select/incomeCategory-select.component.html
@@ -1,4 +1,4 @@
-<main>
+<!-- <main>
   <label>
     {{title}}:
   </label>
@@ -15,4 +15,25 @@
     </ul>
     <div class="add" (click)="add()">添加收入类别</div>
   </div>
+</main> -->
+
+<main>
+  <form>
+    <div class="form-item">
+      <label class="form-label" for="input-example-1">{{title}}</label>
+      <div class="has-icon-left" #incomeCategoryListEle>
+        <input type="text" class="form-input" placeholder="请选择收入类别" name="incomeCategory" [(ngModel)]="incomeCategory"
+          autocomplete="off" id="incomeCategory-list">
+        <i class="form-icon fa fa-th-large" aria-hidden="true"></i>
+      </div>
+      <ul class="menu" *ngIf="ulShow">
+        <li class="menu-item" *ngFor="let item of list" (click)="selectItem(item)">
+          <a>{{item?.name}}</a>
+        </li>
+        <li class="menu-item add">
+          <button class="btn btn-primary btn-sm" (click)="add()"><i class="icon icon-plus"></i> 添加支出类别</button>
+        </li>
+      </ul>
+    </div>
+  </form>
 </main>
