--- a/src/app/components/account/components/expense/expense-add-edit/expense-add-edit.component.html
+++ b/src/app/components/account/components/expense/expense-add-edit/expense-add-edit.component.html
@@ -7,7 +7,7 @@
     <form>
       <div class="columns">
         <div class="column col-6">
-          <dr-date [type]="'input'" [viewType]="'day'" [initDate]="expenseDate" (setDate)="onSetDate($event)"></dr-date>
+          <dr-date [type]="'input'" [name]="'日期'" [viewType]="'day'" [initDate]="expenseDate" (setDate)="onSetDate($event)"></dr-date>
         </div>
         <div class="column col-6">
           <address-select [title]="'支出地点'" [addressId]="addressId" (setAddress)="onSetAddress($event)"></address-select>
