--- a/src/app/components/account/components/income/income-add-edit/income-add-edit.component.html
+++ b/src/app/components/account/components/income/income-add-edit/income-add-edit.component.html
@@ -1,63 +1,94 @@
 <main>
   <form>
-    <div class="row-3">
-      <address-select [title]="'收入地点'" [addressId]="addressId" (setAddress)="onSetAddress($event)"></address-select>
-    </div>
-    <div class="row-3">
-      <fund-party-select [title]="'付款方'" [type]="2" (setFundParty)="onSetFundParty($event)" [fundPartyId]="fundPartyId"></fund-party-select>
-    </div>
-    <div class="row-3">
-      <incomeCategory-select [title]="'收入类别'" (setCategory)="onSetCategory($event)" [incomeCategoryId]="incomeCategoryId"></incomeCategory-select>
-    </div>
-    <div class="row-3">
-      <label>
-        收款金额:
-      </label>
-      <div class="amount">
-        <input type="text" name="amount" placeholder="请输入收入金额" [(ngModel)]="amount">
-        <span>元</span>
+    <div class="columns">
+      <div class="column col-6">
+        <address-select [title]="'收入地点'" [addressId]="addressId" (setAddress)="onSetAddress($event)"></address-select>
       </div>
-    </div>
-    <div class="row-3">
-      <fundChannel-select [title]="'收款渠道'" (setFundChannel)="onSetsetFundChannel($event)" [fundChannelId]="fundChannelId"></fundChannel-select>
-    </div>
-    <div class="row-3">
-      <fund-account-select [title]="'存入账户'" [fundChannelId]="fundChannelId" (setFundAccount)="onSetFundAccount($event)"
-        [filterCredit]="true" [fundAccountId]="fundAccountId"></fund-account-select>
-    </div>
-    <div class="row-6">
-      <label>收款周期:</label>
-      <div class="row-6 period">
-        <input class="row-3" type="date" name="startDate" [(ngModel)]="startDate">
-        <input class="row-3" type="date" name="endDate" [(ngModel)]="endDate">
+      <div class="column col-6">
+        <fund-party-select [title]="'付款方'" [type]="2" (setFundParty)="onSetFundParty($event)"
+          [fundPartyId]="fundPartyId">
+        </fund-party-select>
       </div>
     </div>
 
-    <div class="row-6 participant">
-      <participant-select [title]="'参与'" (setParticipantList)="onSetParticipantList($event)" [hasParticipantList]="participantList"></participant-select>
-    </div>
-    <div class="row-6 label">
-      <label-select [title]="'标签'" [type]="'2'" (setLabelList)="onSetLabelList($event)" [hasLabelList]="labelList"></label-select>
+    <div class="columns">
+      <div class="column col-6">
+        <incomeCategory-select [title]="'收入类别'" (setCategory)="onSetCategory($event)"
+          [incomeCategoryId]="incomeCategoryId"></incomeCategory-select>
+      </div>
+      <div class="column col-6">
+        <label class="form-label">
+          收款金额:
+        </label>
+        <div class="input-group">
+          <input class="form-input" type="number" step="0.01" placeholder="收入金额" name="amount" [(ngModel)]="amount">
+          <span class="input-group-addon">元</span>
+        </div>
+      </div>
     </div>
 
-    <div class="row-6 memo">
-      <label>
-        备注:
-      </label>
-      <textarea name="memo" [(ngModel)]="memo" class="row-6"></textarea>
+    <div class="columns">
+      <div class="column col-6">
+        <fundChannel-select [title]="'收款渠道'" (setFundChannel)="onSetsetFundChannel($event)"
+          [fundChannelId]="fundChannelId"></fundChannel-select>
+      </div>
+      <div class="column col-6">
+        <fund-account-select [title]="'存入账户'" [fundChannelId]="fundChannelId"
+          (setFundAccount)="onSetFundAccount($event)" [filterCredit]="true" [fundAccountId]="fundAccountId">
+        </fund-account-select>
+      </div>
+    </div>
+
+
+    <div class="columns">
+      <div class="column col-6">
+        <dr-date [type]="'input'" [name]="'开始日期'" [viewType]="'day'" [initDate]="startDate"
+          (setDate)="onSetDate($event)"></dr-date>
+      </div>
+      <div class="column col-6">
+        <dr-date [type]="'input'" [name]="'结束日期'" [viewType]="'day'" [initDate]="endDate" (setDate)="onSetDate($event)">
+        </dr-date>
+      </div>
+      <!-- <div class="column col-4">
+        <dr-date [type]="'input'" [name]="'收款日期'" [viewType]="'day'" [initDate]="endDate" (setDate)="onSetDate($event)">
+        </dr-date>
+      </div> -->
+    </div>
+
+    <div class="columns detail">
+      <participant-select [title]="'参与'" (setParticipantList)="onSetParticipantList($event)"
+        [hasParticipantList]="participantList"></participant-select>
+    </div>
+
+    <div class="columns detail">
+      <label-select [title]="'标签'" [type]="'1'" (setLabelList)="onSetLabelList($event)" [hasLabelList]="labelList">
+      </label-select>
+    </div>
+    <div class="columns detail">
+      <memo [title]="'备注'" [maxNumber]="500" (setMemo)="onSetMemo($event)"></memo>
     </div>
   </form>
 
-  <div class="btn-group" *ngIf="!editOrDelFlag && addFlag">
-    <button (click)="add()">添加收入</button>
-    <button (click)="reset()">重置</button>
+  <div class="dr-btn-group" *ngIf="!editOrDelFlag && addFlag">
+    <button class="btn btn-primary" (click)="add()">
+      <i class="icon icon-plus"></i> 添加
+    </button>
+    <button class="btn btn-Secondary" (click)="reset()">
+      <i class="icon icon-refresh"></i> 重置
+    </button>
+  </div>
+  <div class="edit-del" *ngIf="editOrDelFlag && !addFlag">
+    <div class="dr-btn-group">
+      <button class="btn btn-primary" (click)="edit()">
+        <i class="icon icon-edit"></i> 编辑
+      </button>
+      <button class="btn btn-error" (click)="del()">
+        <i class="icon icon-delete"></i> 删除
+      </button>
+    </div>
+    <button class="btn btn-link go-add" (click)="goAdd()">
+      <i class="icon icon-share"></i> 添加收入
+    </button>
   </div>
 
-  <div class="edit-del" *ngIf="editOrDelFlag && !addFlag">
-    <div class="btn-group">
-      <button (click)="edit()">编辑</button>
-      <button (click)="del()">删除</button>
-    </div>
-    <a (click)="goAdd()">&gt;&gt;添加收入</a>
-  </div>
 </main>
