--- a/src/app/components/account/components/income/income-list/income-list.component.html
+++ b/src/app/components/account/components/income/income-list/income-list.component.html
@@ -1,12 +1,13 @@
 <main>
   <div class="month-income">
-    <span (click)="getCal()" *ngIf="!isShowCal">{{showDate}}</span>
-    <input type="month" [hidden]="!isShowCal" name="selectDate" [ngModel]="selectDate" (ngModelChange)="changeDate($event)">
+    <!-- <span (click)="getCal()" *ngIf="!isShowCal">{{showDate}}</span>
+    <input type="month" [hidden]="!isShowCal" name="selectDate" [ngModel]="selectDate" (ngModelChange)="changeDate($event)"> -->
+    <dr-date [type]="'text'" [viewType]="'month'" [name]="" [initDate]="date" (setDate)="changeDate($event)"></dr-date>
     <span>
       总计: {{incomeService?.totalMonthAmount}}元
     </span>
   </div>
-  <div class="no-content" *ngIf="!(incomeService?.incomeList && incomeService?.incomeList.length)">
+  <div class="no-income" *ngIf="!(incomeService?.incomeList && incomeService?.incomeList.length)">
     当前没有收入
   </div>
   <ul class="income-list" *ngIf="incomeService?.incomeList && incomeService?.incomeList.length">
