--- a/src/app/core/components/expense-category/expense-category-select/expense-category-select.component.html
+++ b/src/app/core/components/expense-category/expense-category-select/expense-category-select.component.html
@@ -3,7 +3,7 @@
     <div class="form-item">
       <label class="form-label" for="input-example-1">{{title}}</label>
       <div class="has-icon-left" #expenseCategoryListEle>
-        <input type="text" class="form-input" placeholder="请选择支出类别" name="expenseCategory" [(ngModel)]="expenseCategory"
+        <input type="text" #expenseCategoryInputEle class="form-input" placeholder="请选择支出类别" name="expenseCategory" [(ngModel)]="expenseCategory"
           autocomplete="off" id="expenseCategory-list">
         <i class="form-icon fa fa-th-large" aria-hidden="true"></i>
       </div>
